--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
     <section>
         <div class="hello">
-            <h1>Hello</h1>
-            <h3>My name Kate</h3>
+            <h1>Hello My name Kate</h1>
+            <h3>I am like brow brow brow brow brow brow</h3>
         </div>
         <img class="logo" src="1.jpg" alt="">
     </section>
     <header>
-        <a class="Brow" href="#">Brow</a>
-        <a class="Brow" href="#">Brow</a>
-        <a class="Brow" href="#">Brow</a>
+        <a class="Brow" href="#">Брови</a>
+        <a class="Brow" href="#">Губы</a>
+        <a class="Brow" href="#">Глаза</a>
 
     </header>
     <div class="gallery">
