--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <script src="script.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Pacifico&family=Playfair+Display+SC:ital,wght@1,900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Pacifico&family=Playfair+Display+SC:ital,wght@1,900&family=Poiret+One&family=Raleway:ital,wght@0,100;0,400;1,100&display=swap');
+    </style>
 </head>
 
 <body>
 
     <section>
         <div class="hello">
-            <h1>Hello My name Kate</h1>
-            <h3>I am like brow brow brow brow brow brow</h3>
+            <h1>Меня зовут Екатерина</h1>
+            <h3>я занимаюсь перманентным макияжем с 2015г. Перманентный макияж — это внедрение специального пигмента в верхние слои дермы с помощью иглы для создания стойкого рисунка на лице, чтоб подчеркнуть, выделить, скорректировать, улучшить некоторые
+                черты лица или имитировать обычный макияж. </h3>
         </div>
         <img class="logo" src="1.jpg" alt="">
     </section>
@@ -27,13 +32,13 @@
 
     </header>
     <div class="gallery">
-        <img class="foto" src="1.jpg" alt="">
-        <img class="foto" src="1.jpg" alt="">
-        <img class="foto" src="1.jpg" alt="">
-        <img class="foto" src="1.jpg" alt="">
-        <img class="foto" src="1.jpg" alt="">
-        <img class="foto" src="1.jpg" alt="">
-        <img class="foto" src="1.jpg" alt="">
+        <img class="foto" src="1.jpeg" alt="">
+        <img class="foto" src="2.jpeg" alt="">
+        <img class="foto" src="3.jpeg" alt="">
+        <img class="foto" src="4.jpeg" alt="">
+        <img class="foto" src="5.jpeg" alt="">
+        <img class="foto" src="6.jpeg" alt="">
+        <img class="foto" src="7.jpeg" alt="">
     </div>
 
     <footer>
