--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <section>
         <div class="hello">
-            <h1>Меня зовут Екатерина</h1>
-            <h3>я занимаюсь перманентным макияжем с 2015г. Перманентный макияж — это внедрение специального пигмента в верхние слои дермы с помощью иглы для создания стойкого рисунка на лице, чтоб подчеркнуть, выделить, скорректировать, улучшить некоторые
-                черты лица или имитировать обычный макияж. </h3>
+            <h1>Приветствую</h1>
+            <h3>‌Я Екатерина. Мастер перманентного макияжа из Санкт-Петербурга. Работаю в сфере с 2015 года. Художественное образование, опыт работы в России и Европе, владение различными техниками, позволяет мне добиваться результата который понравится именно
+                вам. С помощью перманента можно подчеркнуть вашу природную красоту и индивидуальность, забыть о декоративной косметике и не бояться намочить, размазать макияж. </h3>
         </div>
         <img class="logo" src="1.jpg" alt="">
     </section>
