--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
 
     </header>
     <div class="gallery">
-        <img class="foto" src="1.jpeg" alt="">
+        <img class="foto" src="1.jpg" alt="">
+        <img class="foto" src="2.jpeg" alt="">
+        <img class="foto" src="3.jpeg" alt="">
+        <img class="foto" src="4.jpeg" alt="">
+        <img class="foto" src="5.jpeg" alt="">
+        <img class="foto" src="6.jpeg" alt="">
+        <img class="foto" src="1.jpg" alt="">
         <img class="foto" src="2.jpeg" alt="">
         <img class="foto" src="3.jpeg" alt="">
         <img class="foto" src="4.jpeg" alt="">
@@ -40,6 +46,7 @@
         <img class="foto" src="6.jpeg" alt="">
 
     </div>
+
 
     <footer>
         <h3>Good bay!</h3>
