--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
 
     <header>
-        <a class="Brow" href="#">Брови</a>
+        <a class="Brow" href="brow.html">Брови</a>
         <a class="Brow" href="#">Губы</a>
         <a class="Brow" href="#">Глаза</a>
 
