--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>BrillPMU</title>
     <script src="script.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Pacifico&family=Playfair+Display+SC:ital,wght@1,900&display=swap');
@@ -20,7 +20,9 @@
         <div class="hello">
             <h1>Приветствую</h1>
             <h3>‌Я Екатерина. Мастер перманентного макияжа из Санкт-Петербурга. Работаю в сфере с 2015 года. Художественное образование, опыт работы в России и Европе, владение различными техниками, позволяет мне добиваться результата который понравится именно
-                вам. С помощью перманента можно подчеркнуть вашу природную красоту и индивидуальность, забыть о декоративной косметике и не бояться намочить, размазать макияж. </h3>
+                вам.
+            </h3>
+            <!---<h3>С помощью перманента можно подчеркнуть вашу природную красоту и индивидуальность, забыть о декоративной косметике и не бояться намочить, размазать макияж.</h3> -->
         </div>
         <img class="logo" src="1.jpg" alt="">
     </section>
@@ -32,7 +34,7 @@
 
     </header>
     <div class="gallery">
-        <img class="foto" src="1.jpg" alt="">
+        <img class="foto" src="6.jpeg" alt="">
         <img class="foto" src="2.jpeg" alt="">
         <img class="foto" src="3.jpeg" alt="">
         <img class="foto" src="4.jpeg" alt="">
@@ -49,7 +51,8 @@
 
 
     <footer>
-        <h3>Good bay!</h3>
+        <h3></h3>
+        <button>Записаться</button>
 
     </footer>
 
