--- a/brow.html
+++ b/brow.html
@@ -8,6 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css">
     <link rel="stylesheet" href="style1.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Pacifico&family=Playfair+Display+SC:ital,wght@1,900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comforter+Brush&family=Pacifico&family=Playfair+Display+SC:ital,wght@1,900&family=Poiret+One&family=Raleway:ital,wght@0,100;0,400;1,100&display=swap');
+    </style>
 </head>
 
 <body>
@@ -39,8 +43,16 @@
                 <img src="3.jpeg" alt="alt">
             </a>
 
+
+
+
         </div>
     </section>
+    <footer>
+        <a class="index" href="index.html">
+            <h2>назад</h2>
+        </a>
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
